--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "start": "nodemon ./server/index.js",
     "dev": "concurrently --kill-others-on-fail \"cd client && npm start\" \"nodemon ./server/index.js\"",
     "client:init": "cd client && npm i",
-    "client:build": "cd client && npm run build",
+    "build": "cd client && npm run build",
     "init:both": "npm i && npm run client:init",
     "coverage": "codecov",
     "test:coverage": "NODE_ENV=test jest --coverage --runInBand --detectOpenHandles --forceExit",
     "test:client": "cd client && npm test",
     "test:client:coverage": "NODE_ENV=test cd client && npm run test:coverage",
     "test": "NODE_ENV=test npm run test:coverage && npm run test:client:coverage",
-    "heroku-postbuild": "npm run client:init && npm run client:build",
+    "heroku-postbuild": "npm run client:init && npm run build",
     "build:data": "node server/database/dummyData/index.js"
   },
   "devDependencies": {
