--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test:client:coverage": "NODE_ENV=test cd client && npm run test:coverage",
     "test": "NODE_ENV=test npm run test:coverage && npm run test:client:coverage",
     "heroku-postbuild": "npm run client:init && npm run build",
-    "build:data": "node server/database/dummyData/index.js"
+    "build:data:dev": "NODE_ENV=dev node server/database/data/development/index.js",
+    "build:data:prd": "node server/database/data/production/index.js"
   },
   "devDependencies": {
     "codecov": "^3.5.0",
