--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "boom": "^7.3.0",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
+    "dotenv": "^8.0.0",
     "env2": "^2.2.2",
     "express": "^4.16.4",
     "joi": "^14.3.1",
