--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "codecov": "^3.5.0",
     "concurrently": "^4.1.0",
-    "eslint": "5.12.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -43,7 +43,7 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
-    "jest": "23.6.0",
+    "jest": "24.7.1",
     "nodemon": "^1.19.0"
   },
   "dependencies": {
