--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.8",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "supertest": "^4.0.2"
   }
 }
