--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "dotenv": "^8.0.0",
     "env2": "^2.2.2",
     "express": "^4.16.4",
+    "firebase-admin": "^8.0.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.8",
