--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "antd": "^3.16.3",
     "axios": "^0.18.0",
     "http-proxy-middleware": "^0.19.1",
+    "moment": "^2.24.0",
     "react": "^16.8.2",
     "react-calendar": "^2.19.0",
     "react-dom": "^16.8.2",
+    "react-moment": "^0.9.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
     "react-test-renderer": "^16.8.3",
