--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.16.3",
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.19.1",
+    "moment": "^2.24.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
