--- a/package.json
+++ b/package.json
@@ -58,10 +58,11 @@
     "firebase-admin": "^8.0.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.8",
     "morgan": "^1.9.1",
-    "shortid": "^2.2.14",
     "multer": "^1.4.1",
+    "shortid": "^2.2.14",
     "supertest": "^4.0.2"
   }
 }
