--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^3.0.1",
     "react-test-renderer": "^16.8.3",
     "styled-components": "^4.1.3",
+    "sweetalert2": "^8.12.1",
     "yup": "^0.27.0"
   },
   "devDependencies": {
