--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test:client": "cd client && npm test",
     "test:client:coverage": "NODE_ENV=test cd client && npm run test:coverage",
     "test": "NODE_ENV=test npm run test:coverage && npm run test:client:coverage",
+    "test:current": "NODE_ENV=test jest server/__test__/api/reviews.js --runInBand --detectOpenHandles --forceExit",
     "heroku-postbuild": "npm run client:init && npm run build",
     "build:data:dev": "NODE_ENV=dev node server/database/data/development/index.js",
     "build:data:prd": "node server/database/data/production/index.js"
