--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
     "jest": "24.7.1",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -62,7 +63,6 @@
     "mongoose": "^5.5.8",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "shortid": "^2.2.14",
-    "supertest": "^4.0.2"
+    "shortid": "^2.2.14"
   }
 }
