--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.19.1",
     "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
     "react": "^16.8.2",
     "react-calendar": "^2.19.0",
     "react-dom": "^16.8.2",
