--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
       "!**/client/**",
       "!**/server/app.js",
       "!**/coverage/**"
+    ],
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./testSetup.js"
     ]
   },
   "proxy": "http://localhost:8080",
