--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-moment": "^0.9.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
+    "react-stripe-elements": "^4.0.1",
     "react-test-renderer": "^16.8.3",
     "styled-components": "^4.1.3",
     "sweetalert2": "^8.12.1",
