--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   },
   "proxy": "http://localhost:8080",
   "nodemonConfig": {
-    "watch": ["./server","./package.json", "./client/src/constants"] },
+    "watch": [
+      "./server",
+      "./package.json",
+      "./client/src/constants"
+    ]
+  },
   "scripts": {
     "start": "node ./server/index.js",
     "dev": "concurrently --kill-others-on-fail \"cd client && npm start\" \"nodemon ./server/index.js\"",
@@ -28,7 +33,7 @@
     "test:client": "cd client && npm test",
     "test:client:coverage": "NODE_ENV=test cd client && npm run test:coverage",
     "test": "cross-env NODE_ENV=test npm run test:coverage && npm run test:client:coverage",
-    "test:current": "cross-env NODE_ENV=test jest server/__test__/api/reviews.js --runInBand --detectOpenHandles --forceExit",
+    "test:current": "cross-env NODE_ENV=test jest server/__test__/database/queries/payments.createInstallments.js --runInBand --detectOpenHandles --forceExit",
     "heroku-postbuild": "npm run client:init && npm run build",
     "build:data:dev": "cross-env NODE_ENV=dev node server/database/data/development/index.js",
     "build:data:prd": "node server/database/data/production/index.js"
@@ -64,9 +69,11 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
     "mongoose": "^5.5.8",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "shortid": "^2.2.14"
+    "shortid": "^2.2.14",
+    "stripe": "^7.8.0"
   }
 }
