--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
       "!**/client/**",
       "!**/server/app.js",
       "!**/coverage/**"
-    ]
+    ],
+    "testEnvironment": "node"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
