# This is a combination of 2 commits. # This is the 1st commit message:
delete jest setup file

temp commit

change test seutp

# This is the commit message #2:

Update the fake test data

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "jest": {
-    "testRegex": "__test__/database/schema/*",
+    "testRegex": "__test__/*",
     "coverageDirectory": "./coverage/",
     "collectCoverageFrom": [
       "**/*.js",
