delete jest setup file
temp commit

change test seutp

Update the fake test data

update test files + update fake test data

Add sort function to interns data to get the right intern for bookings test

add console for error

add console.log

add console.log

add console.log

add console.log

add console.log

add console.log

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ cache:
     - node_modules
 
 env:
-  - MONGODB=4.0.0
+  global:
+    - MONGODB=4.0.0
+    - MONGOURIATLAS=mongodb+srv://abd:123@localhost-yaadf.mongodb.net/atlas-test?retryWrites=true&w=majority
 
-matrix:
+  matrix:
   fast_finish: true
 
 install:
