--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "mongoose": "^5.5.8",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "node-cron": "^2.0.3",
     "shortid": "^2.2.14"
   }
 }
