--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-cron": "^2.0.3",
+    "nodemailer": "^6.3.0",
     "shortid": "^2.2.14"
   }
 }
