--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test:client": "cd client && npm test",
     "test:client:coverage": "NODE_ENV=test cd client && npm run test:coverage",
     "test": "cross-env NODE_ENV=test npm run test:coverage && npm run test:client:coverage",
-    "test:current": "cross-env NODE_ENV=test jest server/__test__/database/queries/payments.createInstallments.js --runInBand --detectOpenHandles --forceExit",
+    "test:current": "cross-env NODE_ENV=test jest server/__test__/api/admin.viewWithdrawRequests --runInBand --detectOpenHandles --forceExit",
     "heroku-postbuild": "npm run client:init && npm run build",
     "build:data:dev": "cross-env NODE_ENV=dev node server/database/data/development/index.js",
     "build:data:test": "cross-env NODE_ENV=build node server/database/data/test/index.js",
