--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.2",
     "react-calendar": "^2.19.0",
     "react-dom": "^16.8.2",
+    "react-highlight-words": "^0.16.0",
     "react-moment": "^0.9.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
