--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/browser": "^5.6.3",
     "antd": "^3.23.2",
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.19.1",
