--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "@sentry/node": "^5.6.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "boom": "^7.3.0",
