--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "jest": {
     "testRegex": "__test__/*",
     "coverageDirectory": "./coverage/",
+    "modulePathIgnorePatterns" : ["__test__/database/"],
     "collectCoverageFrom": [
       "**/*.js",
       "!**/node_modules/**",
@@ -42,44 +43,44 @@
     "build:data:prd": "node server/database/data/production/index.js"
   },
   "devDependencies": {
-    "codecov": "^3.5.0",
-    "concurrently": "^4.1.0",
-    "cross-env": "^5.2.0",
+    "codecov": "^3.6.1",
+    "concurrently": "^4.1.2",
+    "cross-env": "^5.2.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-standard": "^4.0.1",
     "jest": "24.7.1",
-    "nodemon": "^1.19.0",
+    "nodemon": "^1.19.4",
     "supertest": "^4.0.2"
   },
   "dependencies": {
-    "@sentry/node": "^5.6.2",
+    "@sentry/node": "^5.10.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "boom": "^7.3.0",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "env2": "^2.2.2",
     "express": "^4.16.4",
-    "firebase-admin": "^8.0.0",
+    "firebase-admin": "^8.9.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
-    "mongoose": "^5.5.8",
+    "mongoose": "^5.8.5",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-cron": "^2.0.3",
-    "nodemailer": "^6.3.0",
-    "shortid": "^2.2.14",
-    "stripe": "^7.8.0"
+    "nodemailer": "^6.4.2",
+    "shortid": "^2.2.15",
+    "stripe": "^7.15.0"
   }
 }
