--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,8 @@ script:
 on:
   branch: master
 
-after_success:
-  - npm run coverage
+# after_success:
+  # - npm run coverage
 
 after_script:
   - pkill mongod
