--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "jest": {
     "testRegex": "__test__/*",
     "coverageDirectory": "./coverage/",
-    "modulePathIgnorePatterns" : ["__test__/database/"],
+    "modulePathIgnorePatterns" : ["__test__/database/", "__test__/api/"],
     "collectCoverageFrom": [
       "**/*.js",
       "!**/node_modules/**",
