Create Coupon Bugfixes (#306)
* added antd select as discount range dropdown solution

* added validation error message for dates in create coupon

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "jest": {
     "testRegex": "__test__/*",
     "coverageDirectory": "./coverage/",
-    "modulePathIgnorePatterns" : ["__test__/database/", "__test__/api/"],
+    "modulePathIgnorePatterns": [
+      "__test__/database/",
+      "__test__/api/"
+    ],
     "collectCoverageFrom": [
       "**/*.js",
       "!**/node_modules/**",
