--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "codecov": "^3.6.1",
     "concurrently": "^4.1.2",
     "cross-env": "^5.2.1",
-    "eslint": "^5.16.0",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -59,7 +59,7 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "24.7.1",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.4",
     "supertest": "^4.0.2"
   },
