--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.0",
     "@sentry/node": "^5.10.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -74,7 +75,6 @@
     "env2": "^2.2.2",
     "express": "^4.16.4",
     "firebase-admin": "^8.9.0",
-    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
