new eslint configs (#332)

--- a/client/package.json
+++ b/client/package.json
@@ -17,24 +17,9 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
     "react-stripe-elements": "^4.0.1",
-    "react-test-renderer": "^16.8.3",
     "styled-components": "^5.0.0",
     "sweetalert2": "^8.12.1",
     "yup": "^0.27.0"
-  },
-  "devDependencies": {
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.16.4",
-    "react-testing-library": "^6.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,5 +44,16 @@
       "!src/**"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "1.19.1"
+  }
 }
