--- a/package.json
+++ b/package.json
@@ -50,17 +50,13 @@
     "concurrently": "^4.1.2",
     "cross-env": "^5.2.1",
     "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsx-a11y": "^6.2.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
+    "prettier": "1.19.1",
     "supertest": "^4.0.2"
   },
   "dependencies": {
