Intern create profile bugfixing and improvements (#378)
* added required fields for internCreateProfile

* fixed tons of issues

* awaits final testings

* scrolling on tab change/validation fail

* More bugfixes, fixed scrolling really..

* More bugfixes, fixed scrolling really..

* added few lines to let it pass the `null`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-  "eslint.workingDirectories": ["client","server"],
-  "prettier.trailingComma": "all",
-  "editor.formatOnSave": true
+  "eslint.workingDirectories": ["client", "server"],
+  "editor.formatOnSave": false,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
 }
