--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "test": "cross-env NODE_ENV=test npm run test:coverage && npm run test:client:coverage",
     "test:current": "cross-env NODE_ENV=test jest server/__test__/api/admin.viewWithdrawRequests --runInBand --detectOpenHandles --forceExit",
     "heroku-postbuild": "npm run client:init && npm run build",
-    "build:data:dev": "cross-env NODE_ENV=dev node server/database/data/development/index.js",
-    "build:data:test": "cross-env NODE_ENV=build node server/database/data/test/index.js",
+    "build:data:dev": "cross-env NODE_ENV=development node server/database/data/test/index.js",
     "build:data:prd": "node server/database/data/production/index.js",
     "lint:server": "eslint server",
     "lint:client": "cd client && eslint .",
