--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
       "__test__/api/bookings/",
       "__test__/api/dashboard/",
       "__test__/api/payments/",
-      "__test__/api/profiles/",
-      "__test__/api/reviews/",
-      "__test__/api/users/"
+      "__test__/api/reviews/"
     ],
     "collectCoverageFrom": [
       "**/*.js",
@@ -54,7 +52,8 @@
     "lint:server": "eslint server",
     "lint:client": "cd client && eslint .",
     "lint-fix:server": "eslint server --fix",
-    "lint-fix:client": "cd client/ && eslint . --fix"
+    "lint-fix:client": "cd client/ && eslint . --fix",
+    "test:local": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit"
   },
   "devDependencies": {
     "codecov": "^3.6.1",
