--- a/.github/workflows/new-issue-labeller.yml
+++ b/.github/workflows/new-issue-labeller.yml
@@ -4,6 +4,9 @@ on:
   issues:
     types: [opened]
 
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   build:
 
@@ -15,3 +18,17 @@ jobs:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
         add-labels: "backlog"
         ignore-if-assigned: true
+        
+        
+  assign_one_project:
+    
+    runs-on: ubuntu-latest
+    name: Assign to One Project
+    
+    steps:
+    - name: Assign NEW issues project plan
+      uses: srggrs/assign-one-project-github-action@1.2.0
+      if: github.event.action == 'opened'
+      with:
+        project: 'https://github.com/yalla-coop/presspad/projects/1'
+
