--- a/.github/workflows/new-issue-labeller.yml
+++ b/.github/workflows/new-issue-labeller.yml
@@ -8,7 +8,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  build:
+  give-backlog-label:
 
     runs-on: ubuntu-latest
 
@@ -20,7 +20,7 @@ jobs:
         ignore-if-assigned: true
         
         
-  assign_one_project:
+  assign_to_project:
     
     runs-on: ubuntu-latest
     name: Assign to One Project
